# Paper_CRPTO

./: .dvcignore  .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EXTRACTION_MANIFEST.json  EXTRACTION_MANIFEST.md  LICENSE  LICENSE-CONTENT  README.md  dvc.yaml  eda_summary_2.xlsx  justfile  monitor_regret_auditability.cmd  params.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/: crpto-mrm-card.md  crpto-paper-export.md  crpto-render.md  crpto-smoke.md  crpto-stage.md  crpto-validate-champion.md
.codex/: README.md  config.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: book-build.yml  book-publish.yml  dbt.yml  dependency-review.yml  lint.yml  test.yml  tests-full.yml
book/: __init__.py  _brand.yml  _quarto.yml  index.qmd  references.bib  styles.scss
book/_extensions/: README.md
book/_helpers/: __init__.py  load_artifacts.py  plot_helpers.py
book/chapters/: 00-crpto-en-una-pagina.qmd  00b-prologo-tesis.qmd  01-introduccion.qmd  02-marco-teorico.qmd  03-metodologia.qmd  04-resultados.qmd  05-discusion.qmd  06-blueprint-manuscrito.qmd  06b-guia-editorial-claims.qmd  07-apendice-robustez.qmd  08-ablacion-mondrian.qmd  09-spo-regret.qmd  10-fair-lending.qmd  11-mrm.qmd  12-funded-set.qmd  13-trazabilidad.qmd  14-release.qmd  15-fundamentos-riesgo-ml.qmd  16-fundamentos-conformal-optimizacion.qmd  17-pipeline-datos-features.qmd  18-pd-calibracion-champion.qmd  19-conformal-dossier.qmd  20-portafolio-policy.qmd  21-gobernanza-explicabilidad-dataset.qmd  22-literatura-trazabilidad-entorno.qmd  23-apendices-regulatorios-y-future-work.qmd  24-bibliografia-crpto-actualizada.qmd  25-reviewer-map.qmd  26-sintesis-tesis.qmd  27-conclusiones-tesis.qmd  28-resultados-auxiliares.qmd  29-ecl-incertidumbre.qmd  README.md  glosario.qmd  (+1 more)
configs/: crpto_conformal_policy.yaml  crpto_conformal_policy_sensitivity.yaml  crpto_fairness_policy.yaml  crpto_mrm_policy.yaml  crpto_optimization.yaml  crpto_pd_model.yaml  crpto_publication_targets.yaml  crpto_tail_satisficing_objective.yaml  ijds_active_evidence_sources.yaml  ijds_claim_ledger.yaml
crpto/: __init__.py
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
docs/: ACADEMIC_CONTEXT.md  ARCHITECTURE.md  PROJECT_HISTORY.md  SCOPE_AND_GOVERNANCE.md  THESIS_PDF_SCOPE.md
models/: ab_attribution_status.json  ab_simulation_status_explicit_champion_only_baseline.json  alpha_sweep_status.json  champion_portfolio_policy.json  champion_registry.json  champion_search_bundle.json  conformal_gap_summary.json  conformal_method_registry.json  conformal_policy_sensitivity_status.json  conformal_policy_status.json  conformal_results_mondrian.pkl.dvc  conformal_variant_selection_status.json  cqr_comparison_status.json  cqr_mondrian_status.json  crpto_distribution_robustness_status.json  crpto_evidence_status.json  crpto_journal_package_status.json  crpto_multidataset_external_status.json  crpto_tail_constrained_reopt_status.json  crpto_tail_satisficing_audit_status.json  decision_threshold.json  encoding_stability_status.json  fairlearn_fairness_status.json  fairness_audit_status.json  fairness_decision_policy.json  final_project_promotion.json  governance_status.json  monotonicity_audit_status.json  mrm_report_status.json  paper_figures_status.json  pd_conformal_width_attribution_status.json  pd_hpo_seed_replay_status.json  pd_model_contract.json  pd_training_status.json  pd_validation_interpretation_status.json  portfolio_optimization_last_valid_artifact.json  portfolio_optimization_runtime_status.json  portfolio_research_policy.json  portfolio_tradeoff_last_valid_artifact.json  portfolio_tradeoff_runtime_status.json  (+4 more)
notebooks/: 10_crpto_cp_robust_opt.ipynb
paper/: CRPTO.qmd  CRPTO_ijds.qmd  README.md  ijds.css  references.bib  supplement_ijds.qmd
scripts/: README.md  analyze_crpto_evidence.py  backtest_conformal_coverage.py  benchmark_conformal_variants.py  benchmark_pd_set_prediction.py  build_bound_tightening_audit.py  build_champion_search_bundle.py  build_concentration_bound_table.py  build_crpto_journal_package.py  build_distribution_robustness_diagnostics.py  build_ijds_binary_geometry_frontier_v4_evidence.py  build_ijds_calibration_selected_evidence.py  build_ijds_comparator_stringency_evidence.py  build_ijds_decision_active_evidence.py  build_ijds_fixed_taxonomy_c2_evidence.py  build_ijds_maturity_safe_evidence.py  build_ijds_policy_support_tie_evidence.py  build_ijds_rolling_origin_stability_evidence.py  build_ijds_submission_tex.py  build_multidataset_external_replication.py  build_papers_tesis_deep_audit.py  build_params_view.py  build_pipeline_results.py  build_price_of_robustness_cross_dataset.py  build_tail_constrained_reoptimization.py  build_tail_satisficing_challenger_audit.py  check_dvc_status_warning.py  check_publication_integrity.py  compile_ijds_submission.py  export_crpto_tables.py  export_dvc_metrics.py  generate_conformal_intervals.py  generate_crpto_figures.py  generate_governance_status.py  generate_mrm_report.py  inspect_ijds_pdfs.py  manage_ijds_dvc_capsule.py  materialize_feature_artifacts.py  optimize_portfolio.py  optimize_portfolio_tradeoff.py  (+23 more)
src/: __init__.py
tests/: test_book_active_companion.py  test_crpto_final_sync.py  test_ijds_active_claim_sync.py  test_ijds_anonymity.py  test_ijds_audit_core.py  test_ijds_comparator_evidence.py  test_ijds_decision_active_evidence.py  test_ijds_decision_active_simulation.py  test_ijds_normalized_objective_frontier.py  test_ijds_normalized_objective_frontier_v2.py  test_ijds_policy_support_tie_audit.py  test_ijds_policy_support_tie_evidence.py  test_ijds_rolling_origin_evidence.py  test_ijds_rolling_origin_protocol.py  test_ijds_v4_claim_sync.py  test_inspect_ijds_pdfs.py  test_manifest_regression.py  test_operational_guardrails.py  test_pool93_body_claim_sync.py  test_publication_integrity.py  test_publication_targets.py  test_quarto_book_guardrails.py  test_submission_preview_layout.py  test_supplement_table_sync.py
(+1012 files in other folders)
