[project]
name = "crpto"
version = "0.1.0"
description = "CRPTO - Conformal Risk-Aware Predict-Then-Optimize: an auditable study of binary conformal geometry, temporal transport, and portfolio comparator design in historical credit data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Carlos Alfredo Vergara Rojas", email = "cavr94@gmail.com" }]
keywords = [
    "credit-risk",
    "probability-of-default",
    "conformal-prediction",
    "predict-then-optimize",
    "comparator-design",
    "decision-audit",
    "portfolio-optimization",
    "lending-club",
    "catboost",
    "partial-identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.3,<4",
    "numpy>=2.0,<3",
    "pyarrow>=18",
    "scipy>=1.14,<2",
    "scikit-learn>=1.6,<2",
    "catboost>=1.2,<1.3",
    "optbinning>=0.21",
    "pyomo>=6.10",
    "highspy>=1.10",
    "ortools>=9.10,<9.12", # OptBinning 0.21 requires OR-Tools <9.12.
    "duckdb>=1.3",
    "dvc[s3]>=3.60",
    "matplotlib>=3.10",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.10",
    "mypy>=1.13",
    "hypothesis>=6.115",
    "pre-commit>=4.0",
    "pypdf>=6,<7",
]

[project.urls]
Homepage = "https://github.com/EigenCharlie/Paper_CRPTO"
Repository = "https://github.com/EigenCharlie/Paper_CRPTO"
Issues = "https://github.com/EigenCharlie/Paper_CRPTO/issues"
Documentation = "https://github.com/EigenCharlie/Paper_CRPTO#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "data",
    "models",
    "reports",
    "scripts/search",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "RUF",   # ruff-specific
    "PERF",  # perflint
    "FURB",  # refurb
    "T20",   # flake8-print (catch stray prints)
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
]
ignore = [
    "E501",   # long lines (line-length=100 already enforced)
    "PERF203",
    "PERF401", # research scripts often append rich dict rows for readability
    "PERF403",
    "B008",
    "PT011",  # broad pytest.raises (research code often needs this)
    "PT018",
    "RET504",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF007",
    "RUF015",
    "RUF046",
    "RUF059",
    "FURB171",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"     = ["T20", "B011", "PT011"]
"scripts/**/*.py"   = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:catboost.*",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src", "scripts", "tests"]
exclude = [
    "^scripts/analyze_crpto_evidence\\.py$",
    "^scripts/backtest_conformal_coverage\\.py$",
    "^scripts/build_crpto_journal_package\\.py$",
    "^scripts/build_tail_satisficing_challenger_audit\\.py$",
    "^scripts/export_crpto_tables\\.py$",
    "^scripts/generate_conformal_intervals\\.py$",
    "^scripts/generate_crpto_figures\\.py$",
    "^scripts/materialize_feature_artifacts\\.py$",
    "^scripts/optimize_portfolio\\.py$",
    "^scripts/optimize_portfolio_tradeoff\\.py$",
    "^scripts/run_crpto_vs_spo_stability\\.py$",
    "^scripts/search/",
    "^scripts/train_pd_model\\.py$",
    "^scripts/validate_conformal_experiment\\.py$",
    "^scripts/validate_conformal_policy\\.py$",
    "^src/data/make_dataset\\.py$",
    "^src/data/prepare_dataset\\.py$",
    "^src/optimization/tail_satisficing_objective\\.py$",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Compatibility modules remain on typed-body checking; the active modules
# listed below are fully strict.
disallow_untyped_defs = false
check_untyped_defs = true
follow_imports = "silent"
show_error_codes = true
pretty = true
# Suppress import-untyped globally because several scientific dependencies do
# not ship complete stubs; runtime contracts cover their integration points.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "optbinning.*",
    "pyomo.*",
    "highspy.*",
    "ortools.*",
    "dvc.*",
    "pandas.*",
    "duckdb.*",
    "loguru.*",
]
ignore_missing_imports = true

# Strict mode for the fully annotated current modules. Protocol-frozen sources
# not listed here still pass the global typed-body gate without source churn.
[[tool.mypy.overrides]]
module = [
    "src.optimization.policy",
    "src.optimization.policy_evaluation",
    "src.optimization.policy_selection",
    "src.optimization.cuopt_adapter",
    "src.optimization.portfolio_model",
    "src.models.binary_conformal_guardrail",
    "src.data.outcome_observability",
    "src.ijds_audit.config",
    "src.ijds_audit.allocation_granularity",
    "src.ijds_audit.claim_ledger",
    "src.ijds_audit.evaluation",
    "src.ijds_audit.fit_label_sensitivity",
    "src.ijds_audit.geometry",
    "src.ijds_audit.grid_contracts",
    "src.ijds_audit.policy_support",
    "src.ijds_audit.portfolio",
    "src.ijds_audit.publication_generation",
    "src.ijds_audit.publication_sources",
    "src.ijds_audit.protocol",
    "src.ijds_audit.robustness_evidence",
    "src.ijds_audit.sensitivity_evidence",
    "src.ijds_audit.simulation",
    "src.ijds_audit.structural_evidence",
    "src.ijds_challengers.archive",
    "src.ijds_challengers.config",
    "src.ijds_challengers.evaluation",
    "src.ijds_challengers.evaluation_config",
    "src.ijds_challengers.frontier",
    "src.ijds_challengers.normalized_frontier",
    "src.evaluation.maturity_safe_portfolio",
    "scripts.build_ijds_binary_geometry_frontier_v4_evidence",
    "scripts.build_ijds_policy_support_tie_evidence",
    "scripts.build_ijds_submission_tex",
    "scripts.check_publication_integrity",
    "scripts.compile_ijds_submission",
    "scripts.inspect_ijds_pdfs",
    "scripts.run_ty_advisory",
    "scripts.experiments.run_ijds_binary_geometry_frontier_v4",
    "scripts.experiments.run_ijds_allocation_granularity_sensitivity",
    "scripts.experiments.run_ijds_fit_label_completion_sensitivity",
    "scripts.experiments.run_ijds_normalized_objective_frontier",
    "scripts.experiments.run_ijds_normalized_objective_frontier_v2",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_optional = true

# V1c source is protocol-hashed. ty's pandas stubs infer the final Series.any()
# reduction as Series | bool, while mypy strict and runtime tests verify it.
[[tool.ty.overrides]]
include = ["src/ijds_challengers/evaluation.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# These active sources are implementation-hashed in the publication evidence.
# Pandas stubs widen groupby scalar keys to Hashable and Timestamp.date() to
# date | NaTType; runtime contracts and strict mypy checks cover both paths.
[[tool.ty.overrides]]
include = ["scripts/experiments/run_ijds_label_lag_sensitivity.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/ijds_audit/raw_data_audit.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
